[metadata]
name = postman-collection-conv
version = attr: postman_collection_conv.__version__

[options]
packages = find:
package_dir = = src
python_requires = >= 3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  markdown-docs-gen = postman_collection_conv.markdown_docs:main
  markdown-requests-gen = postman_collection_conv.markdown_requests:main
